# surface_fitting

./: .gitignore  CMakeLists.txt  README.md  surface_contactConfig.cmake.in
data/: scans.pcd
include/: invkin.h  nurbs.h
src/: invkin.cpp  nurbs.cpp  test_demo.cpp  test_mesh_conversion.cpp
